Fixed headers on shop bundle.

--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -1,6 +1,5 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubShopBundle::base.html.twig" %}
 
-{% block header %}<h1>Order</h1>{% endblock %}
 
 {% block body %}
 
