--- a/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
@@ -1,6 +1,5 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubShopBundle::base.html.twig" %}
 
-{% block header %}<h1>Category</h1>{% endblock %}
 
 {% block body %}
 <p class="box"><a href="{{ path('admin_shop_category_new') }}" class="btn-create"><span>Create category</span></a></p>
