--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
@@ -1,6 +1,5 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubShopBundle::base.html.twig" %}
 
-{% block header %}<h1>Payment Method</h1>{% endblock %}
 
 {% block body %}
 <p class="box"><a href="{{ path('admin_shop_payment_method_new') }}" class="btn-create"><span>Create payment_method</span></a></p>
