--- a/src/Club/ShopBundle/Resources/views/AdminTransaction/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminTransaction/index.html.twig
@@ -1,6 +1,5 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubShopBundle::base.html.twig" %}
 
-{% block header %}<h1>Transaction</h1>{% endblock %}
 
 {% block body %}
 <h2>Transactions</h2>
