--- a/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
@@ -1,6 +1,5 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubShopBundle::base.html.twig" %}
 
-{% block header %}<h1>Checkout</h1>{% endblock %}
 
 {% block body %}
 
