Added templates headers.

--- a/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
+++ b/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
@@ -1,6 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
-
-{% block header %}<h1>Account</h1>{% endblock %}
+{% extends "ClubAccountBundle::base.html.twig" %}
 
 {% block body %}
 
