--- a/src/Club/TaskBundle/Resources/views/Task/index.html.twig
+++ b/src/Club/TaskBundle/Resources/views/Task/index.html.twig
@@ -1,6 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
-
-{% block header %}<h1>Task</h1>{% endblock %}
+{% extends "ClubTaskBundle::base.html.twig" %}
 
 {% block body %}
 
