Fixed some text.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -69,7 +69,7 @@
                         <div class="padding box">
 
                                 <!-- Logo (Max. width = 200px) -->
-                                <p id="logo"><a href="#"><img src="{{ asset('images/logo.gif') }}" alt="Our logo" title="Visit Site" /></a></p>
+                                <p id="logo"><a href="#"><img src="{{ asset('images/logo.gif') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
 
                         </div> <!-- /padding -->
 
