--- a/src/Club/UserBundle/Resources/views/Auth/forgot.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/forgot.html.twig
@@ -22,7 +22,7 @@
         <div id="login-box">
 
                 <!-- Logo -->
-                <p class="nom t-center"><a href="{{ path('homepage') }}"><img src="{{ asset('images/logo.gif') }}" alt="Our logo" title="Visit Site" /></a></p>
+                <p class="nom t-center"><a href="{{ path('homepage') }}"><img src="{{ asset('images/logo.gif') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
 
                 <!-- Messages -->
                 <p class="msg info">Enter your username or email address, and you will receive a reset password email within a few minutes.</p>
