improved design in auth pages.

--- a/src/Club/UserBundle/Resources/views/Auth/register.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/register.html.twig
@@ -1,5 +1,4 @@
-{% extends "ClubUserBundle::base.html.twig" %}
+{% extends "ClubUserBundle:Auth:base.html.twig" %}
 
 {% block body %}
-im logging in :p
 {% endblock %}
