--- a/src/Club/UserBundle/Resources/views/Auth/login.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/login.html.twig
@@ -1,23 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta http-equiv="content-language" content="en" />
-        <meta name="robots" content="noindex,nofollow" />
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/reset.css') }}" /> <!-- RESET -->
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/main.css') }}" /> <!-- MAIN STYLE SHEET -->
-        <!--[if lte IE 6]><link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/main-ie6.css') }}" /><![endif]--> <!-- MSIE6 -->
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/style.css') }}" /> <!-- GRAPHIC THEME -->
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/mystyle.css') }}" /> <!-- WRITE YOUR CSS CODE HERE -->
-        <script type="text/javascript" src="{{ asset('js/toggle.js') }}"></script>
-        <title>Adminizio - Log In</title>
-</head>
+{% extends "ClubUserBundle:Auth:base.html.twig" %}
 
-<body id="login">
-
-<div id="main-02">
-
-        <div id="login-top"></div>
+{% block body %}
+      <div id="login-top"></div>
 
         <div id="login-box">
 
@@ -25,13 +9,8 @@
                 <p class="nom t-center"><a href="{{ path('homepage') }}"><img src="{{ asset('images/logo.gif') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
 
                 <!-- Messages -->
-                {% if error is defined %}
-                <p class="msg error">{{ error.message }}</p>
-                {% endif %}
+                {% include "ClubLayoutBundle:Default:flash.html.twig" %}
 
-                {% if app.session.hasFlash('notice') %}
-                <p class="msg info">{{ app.session.flash('notice') }}</p>
-                {% endif %}
                 <p class="msg info">Enter your username and password.</p>
 
                 <!-- Form -->
@@ -62,8 +41,4 @@
 
         <div id="login-bottom"></div>
 
-</div> <!-- /main -->
-
-</body>
-</html>
-
+{% endblock %}
