Made pages for installer.

--- a/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
@@ -1,20 +1,10 @@
 {% extends "ClubLayoutBundle:Default:base2.html.twig" %}
 
 {% block body %}
-<h2>ClubMaster Installer</h2>
+<h2>Congretulations</h2>
 
-<p>This is the installer program of ClubMaster.</p>
-
-<p>When you have completed the following list of steps, you are ready to start using ClubMaster.</p>
-
-<ul>
-  <li>Check system requirement</li>
-  <li>Database configuration</li>
-  <li>Administrator setup</li>
-  <li>System settings</li>
-</ul>
+<p>You have finished the installation.</p>
 
 <p>ClubMaster team</p>
 
-<p><a href="{{ path("club_installer_installer_check") }}">Start installer</a></p>
 {% endblock %}
