Added some more to the installer.. but not finished jet.

--- a/src/Club/InstallerBundle/Resources/views/Installer/database.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/database.html.twig
@@ -5,6 +5,8 @@
 
 <p>This is the installer program of ClubMaster.</p>
 
+{% include "ClubLayoutBundle:Default:flash.html.twig" %}
+
 <form method="post" action="">
 {{ form_widget(form) }}
 <input type="submit" />
