--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -11,6 +11,11 @@
       <th>Action</th>
     </tr>
   </thead>
+  <tfoot>
+    <tr>
+      <th colspan="6">&#160;</th>
+    </tr>
+  </tfoot>
   <tbody>
   {% for subscription in user.subscriptions %}
     <tr>
@@ -29,7 +34,7 @@
     </tr>
   {% else %}
     <tr>
-      <td colspan="5">There is no subscriptions for this user.</td>
+      <td colspan="6">There is no subscriptions for this user.</td>
     </tr>
   {% endfor %}
   </tbody>
