--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -12,8 +12,8 @@
     </tr>
   </thead>
   <tfoot>
-    <tr>
-      <th colspan="6">&#160;</th>
+    <tr class="bg">
+      <td colspan="6">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
