--- a/src/Club/EventBundle/Resources/views/Event/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/index.html.twig
@@ -1,48 +1,24 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
 {% block body %}
-
 <p class="box"><a href="{{ path('club_event_event_ical') }}" class="btn-info"><span>iCal format</span></a></p>
-<h2>Event</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Id</th>
-      <th>Event</th>
-      <th>Price</th>
-      <th>Start date</th>
-      <th>Stop date</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tfoot>
-    <tr class="bg">
-      <td colspan="6">&#160;</td>
-    </tr>
-  </tfoot>
-  <tbody>
-  {% for event in events %}
-    <tr>
-      <td>{{ event.id }}</td>
-      <td><a href="{{ path('event_event_show', {'id':event.id}) }}">{{ event.eventName }}</a></td>
-      <td>{{ event.price }}</td>
-      <td>{{ event.startDate|date('Y-m-d H:i') }}</td>
-      <td>{{ event.stopDate|date('Y-m-d H:i') }}</td>
-      <td>
-        {% if event.isAttending(user) %}
-        <a href="{{ path('event_event_unattend', {'id':event.id}) }}">Unattend</a>
-        {% else %}
-        <a href="{{ path('event_event_attend', {'id':event.id}) }}">Attend</a>
-        {% endif %}
-      </td>
-    </tr>
-  {% else %}
-  <tr>
-    <td colspan="6">There are no events at the time</td>
-  </tr>
-  {% endfor %}
-  </tbody>
-</table>
+{% for event in events %}
+<div class="box-03 event box">
 
+  <h2 class="nomb"><a href="{{ path('event_event_show', {'id':event.id}) }}"/>{{ event.eventName }}</a></h2>
+  <p class="nomt low">
+    Start date: {{ event.startDate|date('Y-m-d H:i') }}<br />
+    Start date: {{ event.stopDate|date('Y-m-d H:i') }}<br />
+    Price: {% if event.price == '' %}-{% else %}{{ event.price }}{% endif %}
+  </p>
+
+</div> <!-- /box-03 -->
+
+{% else %}
+<div class="box-03 event box">
+  <h2 class="nomb">No events</h2>
+    <p class="nomt low"><em>There are no planned events at the time.</em></p>
+  </div> <!-- /box-03 -->
+{% endfor %}
 {% endblock %}
