--- a/src/Club/EventBundle/Resources/views/Event/show.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/show.html.twig
@@ -4,7 +4,7 @@
 
 <p class="box">
 {% if event.isAttending(user) %}
-<a href="{{ path('event_event_unattend', {'id':event.id}) }}" class="btn-create"><span>Unattend</span></a>
+<a href="{{ path('event_event_unattend', {'id':event.id}) }}" class="btn-delete"><span>Unattend</span></a>
 {% else %}
 <a href="{{ path('event_event_attend', {'id':event.id}) }}" class="btn-create"><span>Attend</span></a>
 {% endif %}
