--- a/web/css/main.css
+++ b/web/css/main.css
@@ -116,6 +116,7 @@ PAGE: FILES
 #content .box-03.zip {background:url("../images/ico-zip.gif") 0 3px no-repeat;}
 #content .box-03.others {background:url("../images/ico-others.gif") 0 3px no-repeat;}
 #content .box-03.event {background:url("../images/icons/50/Actions-view-calendar-upcoming-events-icon.png") 0 3px no-repeat;}
+#content .box-03.log {background:url("../images/icons/50/Sign-Alert-icon.png") 0 3px no-repeat;}
 
 /* =============================================================================
 PAGE: CALENDAR
