--- a/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
@@ -16,7 +16,7 @@
     {% for product in category.getProducts %}
     <tr>
       <td><img src="{{ asset('images/icons/64/Status-image-missing-icon.png') }}" title="No image" alt="No image" />
-      <td><a href="{{ path('shop_product', {'id':product.id}) }}">{{ product.productName }}</a> <em>{{ product.description }}</em></td>
+      <td><a href="{{ path('shop_product', {'id':product.id}) }}">{{ product.productName }}</a> <em>{{ product.description|truncate(40) }}</em></td>
       <td>{{ product.vatPrice }}</td>
       <td><a href="{{ path('shop_product_cart', {'id':product.id}) }}"><img src="{{ asset('images/icons/48/shopping-cart-insert-icon.png') }}" alt="Put in cart" title="Put in cart" /></a></td>
     </tr>
