--- a/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
@@ -3,7 +3,8 @@
 {% block body %}
 
 <form method="post" action="{{ path('admin_user_group', {'id': user.id}) }}">
-{% include "ClubUserBundle:AdminUser:form.html.twig" with {'form': form} %}
+{{ form_row(form) }}
+{% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
 </form>
 
 {% endblock %}
