Fixed forgot password.

--- a/src/Club/MailBundle/Resources/views/Default/password_reset.html.twig
+++ b/src/Club/MailBundle/Resources/views/Default/password_reset.html.twig
@@ -3,7 +3,7 @@ Dear {{ user.profile.name }},
 You have requested to reset your password.
 
 Follow the link and you can reset your password.
-http://localhost/clubmaster_v2/app_dev.php/forgot/{{ forgot.hash }}
+{{ url }}
 
 Best regards,
 ClubMaster
