Renamed Controllers to Admin prefix.

--- a/src/Club/UserBundle/Resources/views/AdminLocation/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocation/new.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('admin_location_new') }}">
-{% include "ClubUserBundle:Location:form.html.twig" with {'form': form} %}
+{% include "ClubUserBundle:AdminLocation:form.html.twig" with {'form': form} %}
 </form>
 
 {% endblock %}
