--- a/src/Club/UserBundle/Resources/views/AdminLocation/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocation/edit.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('admin_location_edit', {'id':location.id}) }}">
-{% include "ClubUserBundle:Location:form.html.twig" with {'form': form} %}
+{% include "ClubUserBundle:AdminLocation:form.html.twig" with {'form': form} %}
 </form>
 
 {% endblock %}
