--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -54,6 +54,6 @@
 </table>
 </form>
 
-{% include "ClubUserBundle:AdminUser:paginator.html.twig" %}
+{% include "ClubLayoutBundle:Default:paginator.html.twig" %}
 
 {% endblock %}
