Added user activation.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -75,7 +75,7 @@
                         <div class="padding box">
 
                                 <!-- Logo (Max. width = 200px) -->
-                                <p id="logo"><a href="#"><img src="{{ asset('bundles/clublayout/images/logo.gif') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
+                                <p id="logo"><a href="{{ path('homepage') }}"><img src="{{ asset('bundles/clublayout/images/logo.gif') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
 
                         </div> <!-- /padding -->
 
