--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -2,7 +2,10 @@
 
 {% block body %}
 
-<p class="box"><a href="{{ path('admin_user_new') }}" class="btn-create"><span>Create user</span></a></p>
+<p class="box">
+  <a href="{{ path('admin_user_new') }}" class="btn-create"><span>Create user</span></a>
+  <a href="javascript:toggle('submit');" class="btn-create"><span>Show filter</span></a>
+</p>
 
 {% render "ClubUserBundle:Filter:getFilter" %}
 
