--- a/src/Club/UserBundle/Resources/views/Filter/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/Filter/form.html.twig
@@ -1,9 +1,20 @@
-<form method="POST" action="{{ path('club_user_filter_filter') }}">
-  <fieldset>
-    <legend>Search</legend>
+<!-- Submit -->
+<div id="submit" class="box-01 box" style="display:none;">
+  <form method="POST" action="{{ path('club_user_filter_filter') }}">
 
-    {{ form_row(form) }}
-    <input type="submit" value="Filter" />
+    {{ form_row(form.min_age) }}
+    {{ form_row(form.max_age) }}
+    {{ form_row(form.gender) }}
+    {{ form_row(form.postal_code) }}
+    {{ form_row(form.city) }}
+    {{ form_row(form.country) }}
+    {{ form_row(form.location) }}
+    {{ form_row(form.is_active) }}
+    {{ form_row(form.has_ticket) }}
+    {{ form_row(form.has_subscription) }}
+    {{ form_row(form._token) }}
 
-  </fieldset>
-</form>
+    <input type="submit" value="Filter" class="input-submit" />
+
+  </form>
+</div>
