Added a working installer.

--- a/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
@@ -1,9 +1,13 @@
-{% extends "ClubLayoutBundle:Default:base2.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base.html.twig" %}
 
 {% block body %}
 <h2>Congretulations</h2>
 
 <p>You have finished the installation.</p>
+
+<p>Now go to the login window and start using your new fresh installation.</p>
+
+<p><a href="{{ path('homepage') }}">Start using ClubMaster</a></p>
 
 <p>ClubMaster team</p>
 
