--- a/src/Club/InstallerBundle/Resources/views/Installer/location.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/location.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base2.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base.html.twig" %}
 
 {% block body %}
 <h2>ClubMaster Installer</h2>
