Removed all trademarks of Adminizio.

--- a/src/Club/UserBundle/Resources/views/Auth/base.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/base.html.twig
@@ -10,7 +10,7 @@
         <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/style.css') }}" /> <!-- GRAPHIC THEME -->
         <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" /> <!-- WRITE YOUR CSS CODE HERE -->
         <script type="text/javascript" src="{{ asset('bundles/clublayout/js/toggle.js') }}"></script>
-        <title>Adminizio - Log In</title>
+        <title>ClubMaster - Log In</title>
 </head>
 
 <body id="login">
