Minor fixes for installer.

--- a/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
@@ -9,6 +9,8 @@
 
 <p><a href="{{ path('homepage') }}">Start using ClubMaster</a></p>
 
+<p>Your username is: <strong>1</strong></p>
+
 <p>ClubMaster team</p>
 
 {% endblock %}
